Preliminary Object assignments

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="war.js" defer></script>
+    <script defer src="war.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
     <h1>WAR</h1>
     <h2>A Card Game</h2>
     <div class="myCards">
@@ -121,7 +122,7 @@
    </div>
   
    <div>
-    <button class= "center" type="button">Play</button>   
+    <button class = "center" type="button">Play</button>   
    </div>
 </body>
 </html>
