--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    <div id ="button_container">
     
-    <button onclick="get_random_image()" class = "center" type="button">Play</button>   
+    <button onclick="get_random_image()" class="center">Play</button>
    </div>
 </body>
 </html>
