--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <script defer src="war.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   
