--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
    <div id ="button_container">
     
-    <button onclick="get_random_image()" class="center">Play</button>
+    <button onclick="get_random_image()" class="center">enter</button>
    </div>
 </body>
 </html>
