pointsUpdate function added. Needs to be debugged

--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
  
    
    
-   <div class="myCards">
-
-   
-
+   <div class="myCards"> 
+       <h3 id= "myScore">My Score =</h3>
 <img id= "image_container1">
-
    </div>
 
    <div class="opponentCards">
+    <h3 id="opponentScore">Opponent's Score =</h3>
     <img id= "image_container2">
-
+    
    </div>
 
    <div id ="button_container">
