--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
    <div id ="button_container">
     
-    <button onclick="get_random_image()" class="center">enter</button>
+    <button class="center">enter</button>
    </div>
 </body>
 </html>
