Template literals used for score update function

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
    
    
    <div class="myCards"> 
-       <h3 id= "myScore">My Score =</h3>
+       <h3 class= "myScore">My Score =</h3>
 <img id= "image_container1">
    </div>
 
    <div class="opponentCards">
-    <h3 id="opponentScore">Opponent's Score =</h3>
+    <h3 class="opponentScore">Opponent's Score =</h3>
     <img id= "image_container2">
     
    </div>
