Added war function that has some issues

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
    <div class="myCards"> 
        <h3 class= "myScore">My Score =</h3>
 <img id= "image_container1">
+<img id= "user_war_card1">
+<img id= "user_war_card2">
+
    </div>
 
    <div class="opponentCards">
     <h3 class="opponentScore">Opponent's Score =</h3>
     <img id= "image_container2">
+    <img id= "opponent_war_card1">
+    <img id= "opponent_war_card2">      
     
    </div>
 
