--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
    <div class="myCards"> 
        <h3 class= "myScore">My Score =</h3>
 <img id= "image_container1">
+<!-- <div class="userWarCards"> -->
 <img id= "user_war_card1">
 <img id= "user_war_card2">
-
-   </div>
+   <!-- </div> -->
+</div>
 
    <div class="opponentCards">
     <h3 class="opponentScore">Opponent's Score =</h3>
     <img id= "image_container2">
+
+    <!-- <div class="opponentWarCards"> -->
     <img id= "opponent_war_card1">
-    <img id= "opponent_war_card2">      
+    <img id= "opponent_war_card2">  
+    <!-- </div> -->
+</div>
     
-   </div>
+ 
 
    <div id ="button_container">
     
